...
					RoundedRectangle(cornerRadius: 8)
						.stroke(lineWidth: 2)
						.foregroundColor(Color.gray)
				)
				.gesture(memorySwipe)
			Text("M")
				.accessibilityIdentifier("memoryDisplay")
		}.padding(.bottom).padding(.horizontal, 5)
	}
}

